# funcLP

./: README.md  pyproject.toml
.ai/: structure.md
.opencode/instructions/: docstrings.md  structure.md
docs/handwritten/: library_basics.rst  license.rst  simple_example.rst
docs/source/: Airy.rst  Airy2D.rst  Binomial.rst  CudaReference.rst  Diamond.rst  Disc.rst  Distribution.rst  Estimator.rst  Exponential1.rst  Exponential2.rst  Exponential3.rst  Fit.rst  Function.rst  Gamma.rst  Gaussian.rst  Gaussian2D.rst  Gaussian3D.rst  GaussianBeam.rst  IsoGaussian.rst  JointChannel.rst  JointFunction.rst  LM.rst  LSE.rst  MLE.rst  Normal.rst  Parameter.rst  Poisson.rst  Polynomial1.rst  Polynomial2.rst  Polynomial3.rst  Polynomial4.rst  Polynomial5.rst  Rectangle.rst  Spline.rst  Spline2D.rst  Spline3D.rst  beginner_guide.rst  concepts.rst  conf.py  distributions.rst  (+21 more)
src/funclp/: __init__.py  modules.json
src/funclp/fits/: LM.py
src/funclp/modules/CudaReference_LP/: test_CudaReference.py
src/funclp/modules/Distribution_LP/: Distribution.py  test_Distribution.py
src/funclp/modules/Estimator_LP/: Estimator.py  test_Estimator.py
src/funclp/modules/Fit_LP/: Fit - Copie.py  Fit.py  Fit_bkup.py  test_Fit.py  test_JointFit.py
src/funclp/modules/Function_LP/: Function.py  test_Function.py
src/funclp/modules/JointFunction_LP/: JointFunction.py  test_JointFunction.py
src/funclp/modules/distributions_LP/: distributions.py  test_distributions.py
src/funclp/modules/estimators_LP/: estimators.py  test_estimators.py
src/funclp/modules/fits_LP/: fits.py  test_fits.py
(+895 files in other folders)
